Makefile is no longer needed Removed CUDA from CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.17)
-project(zeta_path_tracer LANGUAGES CXX CUDA)
+cmake_minimum_required(VERSION 3.15)
+project(zeta_path_tracer LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(src)
 
