--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,17 @@ cmake_minimum_required(VERSION 3.15)
 project(zeta_path_tracer LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
+set(SFML_BUILD_GRAPHICS true)
 
 set(WARNING_FLAGS "-Wall -Wextra -Wno-multichar -Wno-unused-result")
 
 include_directories(src)
 
-set(CMAKE_EXE_LINKER_FLAGS "-pthread")
+set(CMAKE_EXE_LINKER_FLAGS "-pthread ")
 set(CMAKE_CXX_FLAGS_RELEASE  "-O3 ${WARNING_FLAGS}")
 set(CMAKE_CXX_FLAGS_DEBUG   "-g3 -O0 ${WARNING_FLAGS}")
+
+find_package(SFML 2 COMPONENTS system window graphics network audio REQUIRED)
 
 add_executable(pather
         src/hits/aabb.cpp
@@ -55,7 +58,11 @@ add_executable(pather
         src/cameraLightColor/scene.h
         src/color/texture.h
         src/utils/vec3d.cpp
-        src/utils/vec3d.h)
+        src/utils/vec3d.h
+        src/sfml_interface/interface.h
+        src/sfml_interface/interface.cpp)
+
+target_link_libraries(pather sfml-graphics sfml-window sfml-system)        
 
 add_custom_target(convert
         COMMAND convert image.ppm image.png
