frame class, depth map

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "array": "cpp",
+        "string": "cpp",
+        "string_view": "cpp"
     }
 }
