--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -50,6 +50,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "cerrno": "cpp"
+        "cerrno": "cpp",
+        "condition_variable": "cpp"
     }
 }
