--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(zepthir
 
         src/utils/vec3d.cpp
         src/utils/ray.cpp
+        src/utils/timer.cpp
 
         src/tracer/path_tracer.cpp
 
