--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(src)
 set(CMAKE_EXE_LINKER_FLAGS "-pthread")
 set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec -march=native")
 
-find_package(SFML 2 COMPONENTS system window graphics network audio REQUIRED)
+# find_package(SFML 2 COMPONENTS system window graphics network audio REQUIRED)
 
 add_executable(zepher
         src/hits/aabb.cpp
@@ -41,7 +41,7 @@ add_executable(zepher
 
         src/tracer/render_task.cpp
 
-        src/sfml_interface/interface.cpp
+        # src/sfml_interface/interface.cpp
         src/image/denoiser.cpp
         src/multithreading/mt_path_tracer.cpp
         
@@ -73,7 +73,7 @@ add_executable(zepher
         src/main.cpp
         )
 
-target_link_libraries(zepher sfml-graphics sfml-window sfml-system)        
+# target_link_libraries(zepher sfml-graphics sfml-window sfml-system)        
 
 add_custom_target(convert
         COMMAND convert image.ppm image.png
