perlin noise texture added. its bad for perf...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(zepher
 
         src/collections/textures/solid_color.cpp
         src/collections/textures/checkered.cpp
+        src/collections/textures/marble.cpp
 
         src/main.cpp
         )   
