--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,14 @@ set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec")
 include(CheckCXXSourceCompiles)
 check_cxx_source_compiles("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
 
+check_cxx_source_compiles("--gcc-toolchain=/home/pd2022/pd2022065/repos/compiler_pack/gcc-8.1.0/" RUN_ON_MIPT_CUDA)
+
 if(COMPILER_SUPPORTS_MARCH_NATIVE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+endif()
+
+if(RUN_ON_MIPT_CUDA)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --gcc-toolchain=/home/pd2022/pd2022065/repos/compiler_pack/gcc-8.1.0/")
 endif()
 
 add_executable(zepher
