pre-jobber point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,21 @@ project(zeta_path_tracer LANGUAGES CXX)
 
 set(CMAKE_CXX_COMPILER clang++)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 set(WARNING_FLAGS "-Wall -Wextra -Wno-multichar -Wno-unused-result")
 
-include_directories(src)
+include_directories(
+        src
+        # src/utils
+)
 
 set(CMAKE_EXE_LINKER_FLAGS "-pthread")
 
 set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --gcc-toolchain=/home/pd2022/pd2022065/repos/compiler_pack/gcc-8.1.0/")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --gcc-toolchain=/home/pd2022/pd2022065/repos/compiler_pack/gcc-8.1.0/")
 
 add_executable(zepher
         src/hits/aabb.cpp
